--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.5.5",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.4",
     "multer": "^1.4.5-lts.1",
